# turtlebot3_local_planner_benchmark

./: CMakeLists.txt  LICENSE  README.md  README.txt  package.xml
launch/: amcl.launch  move_base.launch  move_base_teb_local_planner.launch  run_simulation_dwa.launch  run_simulation_teb.launch  turtlebot3_navigation.launch  turtlebot3_navigation_teb_local_planner.launch
param/: base_local_planner_params.yaml  costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle_pi.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  my_laser_config.yaml  teb_local_planner.yaml
rviz/: turtlebot3_navigation.rviz  turtlebot3_navigation_dynamic.rviz
src/: debug_service.cpp  goal_pub.cpp
worlds/Dynamic_complex/: obstacles.txt  world.model
worlds/Dynamic_complex/Results/: 01dwa.txt  01teb.txt  02dwa.txt  02teb.txt  03dwa.txt  03teb.txt  04dwa.txt  04teb.txt  05dwa.txt  05teb.txt
worlds/Dynamic_complex/map/: map.pgm
worlds/Dynamic_complex/models/animated_box1/: model.config
worlds/Dynamic_simple/: world.model
worlds/Dynamic_simple/Results/: 01dwa.txt  01teb.txt  02dwa.txt  02teb.txt  03dwa.txt  03teb.txt  04dwa.txt  04teb.txt  05dwa.txt  05teb.txt
worlds/Dynamic_simple/models/animated_box1/: model.sdf
worlds/Static/: world.model
worlds/Static/Results/: 01dwa.txt  01teb.txt  02dwa.txt  02teb.txt  03dwa.txt  03teb.txt
